--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "oasis-website",
   "version": "1.0.0",
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "live-server": "^1.2.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3"
